2008-12-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ffmpegrev:
	Updating ffmpeg SVN revision to r16396 and update to the corresponding
	swscale snapshot. This update features a lot of bugfixes, some of them
	being security related.

2008-12-24  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ffmpegrev:
	Updating ffmpeg SVN revision to r16304 and update to the corresponding
	swscale snapshot.
	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_caps_to_codecid):
	Enable the Real Video 3.0 decoder.

2008-12-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ff_aud_caps_new),
	(gst_ffmpeg_codecid_to_caps), (gst_ffmpeg_smpfmt_to_caps),
	(gst_ffmpeg_codectype_to_caps), (gst_ffmpeg_caps_to_smpfmt),
	(gst_ffmpeg_caps_to_codecid), (av_smp_format_depth):
	* ext/ffmpeg/gstffmpegcodecmap.h:
	Add mapping for EAC3 and QCELP audio codecs.
	Add conversion functions for all available audo SampleFormat.
	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_open),
	(gst_ffmpegdec_setcaps), (gst_ffmpegdec_negotiate),
	(clip_audio_buffer), (gst_ffmpegdec_audio_frame):
	Remove assumptions that we can only handle stereo 16bit signed integer
	audio, and store the depth locally.

2008-12-16  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Require core cvs.

2008-12-16  Stefan Kost  <ensonic@users.sf.net>

	* ext/ffmpeg/gstffmpegmux.c:
	  Renaming tagsetter_flush to _reset_tags().

2008-12-16  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* ext/ffmpeg/gstffmpegmux.c:
	  Fix tag merging. Use tagsetter and not internal copies. Depend on
	  CVS core and use new API to flush.

2008-12-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ff_channel_layout_to_gst):
	If no channel layout is provided don't set a NONE layout in the
	case of >2 channels but instead let audioconvert add some default
	layout.

2008-12-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
